--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Wedside</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-    
+    <div>
+        <h3>MY Fast Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Iste praesentium beatae
+              amet necessitatibus mollitia neque,
+               dolores odio exercitationem dolorem 
+               aliquid fuga sed facilis. Distinctio
+                inventore quis in sapiente quibusdam
+                 incidunt!</p>
+    </div>      
 </body>
 </html>
