--- a/index.html
+++ b/index.html
@@ -16,6 +16,26 @@
                aliquid fuga sed facilis. Distinctio
                 inventore quis in sapiente quibusdam
                  incidunt!</p>
+    </div>
+    <div>
+        <h3>MY Second Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Iste praesentium beatae
+              amet necessitatibus mollitia neque,
+               dolores odio exercitationem dolorem 
+               aliquid fuga sed facilis. Distinctio
+                inventore quis in sapiente quibusdam
+                 incidunt!</p>
+    </div>  
+    <div>
+        <h3>MY Third Website</h3>
+        <p>Lorem ipsum dolor sit amet consectetur
+             adipisicing elit. Iste praesentium beatae
+              amet necessitatibus mollitia neque,
+               dolores odio exercitationem dolorem 
+               aliquid fuga sed facilis. Distinctio
+                inventore quis in sapiente quibusdam
+                 incidunt!</p>
     </div>      
 </body>
 </html>
