--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
                aliquid fuga sed facilis. Distinctio
                 inventore quis in sapiente quibusdam
                  incidunt!</p>
-    </div>      
+    </div> 
+    <div>
+        <h3>You to push incremental code</h3>
+        <ul>
+            <li>git add .</li>
+            <li>git commit -m"a meaning"</li>
+            <li>git push</li>
+        </ul>
+    </div>     
 </body>
 </html>
